@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle

class ":Parser" {
  + parse(): Command
}

class ":Command" {
  + type: CommandType
  + desc: String
  + substring: String
  + isSorted: boolean
  + message: String
  + datetime0: DateTimeArg
  + datetime1: DateTimeArg
  + indexes: LinkedHashSet<Integer>
  + index: int
  + duration: long
  + interval: Duration
  + snoozeDuration: Duration

  + Command()
}

enum ":CommandType" <<enumeration>> {
  TODO
  DEADLINE
  EVENT
  LIST
  FIND
  MARK
  UNMARK
  EDIT_DESC
  EDIT_DEADLINE
  EDIT_FROM
  EDIT_TO
  DELETE
  BYE
  REM_ADD_REC
  REM_ADD_ONETIME
  REM_LS
  REM_RM
  REM_ON
  REM_OFF
  REM_SNOOZE
  START
  PAUSE
  RESUME
  RESET
  STAT
  HABIT_ADD
  HABIT_STREAK
  HABIT_LIST
  HABIT_DELETE
  HELP
}

class ":DateTimeArg" {
  + DateTimeArg()
  + getDate(): LocalDate
  + getTime(): LocalTime
  + getDateTime(): LocalDateTime
}

class ":StudyMateException" {
  + StudyMateException()
}

":Parser" ..> ":Command" : creates
":Parser" ..> ":CommandType" : uses
":Parser" ..> ":DateTimeArg" : uses
":Parser" ..> ":StudyMateException" : throws

":Command" --> ":CommandType" : has
":Command" --> ":DateTimeArg" : contains

@enduml